--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
     than in my video.  Use whichever style sheet you like best! -->
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
 <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">    <!-- My own stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
   <body>  
-    <h1 class="text-uppercase"><strong>The biggest Start Up event of the year</strong></h1>
-    <hr>
-    <button class="btn btn-primary btn-xl">Find out more</button>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">        
+          <h1 class="text-uppercase"><strong>The biggest Start Up event of the year</strong></h1>
+        </header>
+        <div class="buffer col-12">
 
+        </div>
+        <section class="text-center col-12">
+          <hr>
+          <a href="https://mailchi.mp/e374a212b5dd/ztm-students">
+            <button class="btn btn-primary btn-xl">Find out more</button> 
+          </a>
+        </section>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
   </body>
